Fix image white space problem

--- a/web_02/css/artist_page.css
+++ b/web_02/css/artist_page.css
@@ -235,7 +235,7 @@
 
 .grid .recommended .artists .artist-box .img-artist {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 50%;
   margin-bottom: 20.4%;
 }
